[gd_scene load_steps=2 format=3 uid="uid://dvstte0k1hs3h"]

[ext_resource type="Script" path="res://UI/TutorialMenu.gd" id="1_hcsdl"]

[node name="TutorialMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hcsdl")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -29.0
offset_right = 52.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "KeyMappings"

[node name="PlayButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Play"

[connection signal="pressed" from="GridContainer/PlayButton" to="." method="_on_button_pressed"]
